# vacancy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  examples.cc  reconfigure.bat
data/: GT.ply  tumpose.txt
include/vacancy/: camera.h  common.h  image.h  log.h  mesh.h  voxel_carver.h
src/vacancy/: camera.cc  extract_voxel.cc  extract_voxel.h  image.cc  log.cc  marching_cubes.cc  marching_cubes.h  marching_cubes_lut.cc  marching_cubes_lut.h  mesh.cc  renderer.cc  stb.cc  timer.h  voxel_carver.cc
